--- a/activity3.html
+++ b/activity3.html
@@ -13,7 +13,7 @@
     <h1>Hi! I am a student of Grade 9.</h1><br>
     I love painting in my free time. <br>
     I am here to learn Coding at Codingal...
-
+    <!-- Activity for Line break-->
 </body>
 
 </html>
